fix double scroll bar issue

--- a/docs/app/components/home/style.scss
+++ b/docs/app/components/home/style.scss
@@ -1,13 +1,16 @@
 @import "./config";
 
-html,
+html{
+  overflow-x: hidden;
+  overflow-y: scroll; /* has to be scroll, not auto */
+  -webkit-overflow-scrolling: touch;
+}
+
 body {
   height: 100%;
   margin: 0;
   max-width: 100%;
   overflow-x: hidden;
-  overflow-y: scroll; /* has to be scroll, not auto */
-  -webkit-overflow-scrolling: touch;
 }
 
 .root {
@@ -22,12 +25,12 @@ body {
   background-color: $color-primary;
   color: $color-text;
   display: flex;
-  max-width: 940px;
-  margin: auto;
-  position: fixed;
-  top: 0;
   left: 0;
+  margin: auto;
+  max-width: 940px;
+  position: fixed;
   right: 0;
+  top: 0;
   z-index: 10;
 }
 
@@ -39,11 +42,11 @@ body {
 .headblock {
   background-color: $color-primary;
   display: flex;
+  height: 50px;
   position: fixed;
   top: 0;
-  z-index: 10;
   width: 100%;
-  height: 50px;
+  z-index: 10;
 }
 
 .maincontent {
@@ -51,15 +54,15 @@ body {
   font-size: 18px;
   margin: 0 auto;
   max-width: 940px;
+  min-height: 900px;
   position: relative;
   top: 50px;
-  min-height: 900px;
 }
 
 .hero {
-  color: $color-p;
   background-color: $color-dark-contrast;
   border: 1px $color-light-contrast;
+  color: $color-p;
   margin: 0 auto;
   h2 {
     text-align: center;
